--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "mocha -r ts-node/register lib/**/*.test.ts"
+    "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "js-base64": "^3.7.2",
     "js-md5": "^0.7.3",
     "next": "12.0.8",
@@ -17,16 +17,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/expect.js": "^0.3.29",
     "@types/js-md5": "^0.4.3",
-    "@types/mocha": "^9.0.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
-    "expect.js": "^0.3.1",
-    "mocha": "^9.1.4",
-    "ts-node": "^10.4.0",
     "typescript": "4.5.4"
   }
 }
