--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/js-md5": "^0.4.3",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
