--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "node-fetch": "^3.2.0",
     "typescript": "4.5.4"
   }
 }
