--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Add & Commit
         uses: EndBug/add-and-commit@v8.0.1
         with:
-          add: 'lib/patches.json'
+          add: 'pages/api/patches.json'
 
