--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "retropatcher",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
