--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       - run: npm install
 
       - name: Create patches.json
-        run: node scrape.js
+        run: node scrape.mjs
           
       - name: Add & Commit
         uses: EndBug/add-and-commit@v8.0.1
         with:
-          add: 'pages/api/patches.json'
+          add: 'public/patches/pocket.js'
 
