--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "file-saver": "^2.0.5",
     "js-base64": "^3.7.2",
     "js-md5": "^0.7.3",
-    "next": "12.0.8",
-    "npm": "^8.3.1",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -20,8 +19,9 @@
     "@types/file-saver": "^2.0.5",
     "@types/js-md5": "^0.4.3",
     "@types/node": "17.0.8",
+    "@types/node-fetch": "^3.0.3",
     "@types/react": "17.0.38",
-    "eslint": "8.6.0",
+    "eslint": "8.8",
     "eslint-config-next": "12.0.8",
     "node-fetch": "^3.2.0",
     "typescript": "4.5.4"
