--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "javascript-time-ago": "^2.3.11",
     "js-base64": "^3.7.2",
     "js-md5": "^0.7.3",
     "next": "^12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-time-ago": "^7.1.9"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
