--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "file-saver": "^2.0.5",
     "javascript-time-ago": "^2.3.11",
     "js-md5": "^0.7.3",
-    "next": "^12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-time-ago": "^7.1.9"
   },
   "devDependencies": {
