--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "retropatcher",
-  "private": true,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
