Disable cron job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Create patches.json
 
 on:
-  schedule:
-    - cron:  '0 * * * *'
+#   schedule:
+#     - cron:  '0 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
